// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichTextField #error 1`] = `
<div>
  <div
    class="field text_field required error"
  >
    <label
      for="struct-01test"
    >
      Test RichText Field
    </label>
    <div
      class="field-content"
    >
      <div
        class="input"
      >
        <div
          class="mock-draftail"
        >
          <div>
            null
          </div>
          <input
            type="text"
            value=""
          />
          <button>
            Save
          </button>
        </div>
      </div>
      <p
        class="help"
      >
        Sample help text.
      </p>
      <p
        class="error-message"
      >
        This field is required.
      </p>
    </div>
  </div>
</div>
`;

exports[`RichTextField #help_text 1`] = `
<div>
  <div
    class="field text_field"
  >
    <label
      for="struct-01test"
    >
      Test RichText Field
    </label>
    <div
      class="field-content"
    >
      <div
        class="input"
      >
        <div
          class="mock-draftail"
        >
          <div>
            null
          </div>
          <input
            type="text"
            value=""
          />
          <button>
            Save
          </button>
        </div>
      </div>
      <p
        class="help"
      >
        Sample help text.
      </p>
      
    </div>
  </div>
</div>
`;

exports[`RichTextField #label 1`] = `
<div>
  <div
    class="field text_field"
  >
    <label
      for="struct-01test"
    >
      Test RichText Field
    </label>
    <div
      class="field-content"
    >
      <div
        class="input"
      >
        <div
          class="mock-draftail"
        >
          <div>
            null
          </div>
          <input
            type="text"
            value=""
          />
          <button>
            Save
          </button>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`RichTextField #minimal 1`] = `
<div>
  <div
    class="field text_field"
  >
    <label
      for="struct-01test"
    >
      Test
    </label>
    <div
      class="field-content"
    >
      <div
        class="input"
      >
        <div
          class="mock-draftail"
        >
          <div>
            null
          </div>
          <input
            type="text"
            value=""
          />
          <button>
            Save
          </button>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`RichTextField #required 1`] = `
<div>
  <div
    class="field text_field required error"
  >
    <label
      for="struct-01test"
    >
      Test RichText Field
    </label>
    <div
      class="field-content"
    >
      <div
        class="input"
      >
        <div
          class="mock-draftail"
        >
          <div>
            null
          </div>
          <input
            type="text"
            value=""
          />
          <button>
            Save
          </button>
        </div>
      </div>
      <p
        class="help"
      >
        Sample help text.
      </p>
      <p
        class="error-message"
      >
        This field is required.
      </p>
    </div>
  </div>
</div>
`;
